# typesense-python

./: .gitignore  MANIFEST.in  Pipfile  README.md  dev.txt  publish.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/workflows/: lint_python.yml  release.yml  test-and-lint.yml
examples/: alias_operations.py  analytics_operations.py  collection_operations.py  curation_operations.py  index_and_search.py  indexing_in_loop.py  key_operations.py  synonym_operations.py
requirements/: common.txt  dev.txt
src/typesense/: __init__.py  alias.py  aliases.py  analytics.py  analytics_events.py  analytics_rule.py  analytics_rule_v1.py  analytics_rules.py  analytics_rules_v1.py  analytics_v1.py  api_call.py  client.py  collection.py  collections.py  configuration.py  conversation_model.py  conversations_models.py  curation_set.py  curation_sets.py  debug.py  document.py  documents.py  exceptions.py  key.py  keys.py  logger.py  metrics.py  multi_search.py  nl_search_model.py  nl_search_models.py  node_manager.py  operations.py  override.py  overrides.py  preprocess.py  request_handler.py  stemming.py  stemming_dictionaries.py  stemming_dictionary.py  stopwords.py  (+7 more)
src/typesense/types/: __init__.py  alias.py  analytics.py  analytics_rule.py  analytics_rule_v1.py  collection.py  conversations_model.py  curation_set.py  debug.py  document.py  key.py  multi_search.py  nl_search_model.py  operations.py  override.py  stemming.py  stopword.py  synonym.py  synonym_set.py
tests/: __init__.py  alias_test.py  aliases_test.py  analytics_events_test.py  analytics_rule_test.py  analytics_rule_v1_test.py  analytics_rules_test.py  analytics_rules_v1_test.py  analytics_test.py  analytics_v1_test.py  api_call_test.py  client_test.py  collection_test.py  collections_test.py  configuration_test.py  configuration_validations_test.py  conftest.py  conversation_model_test.py  conversations_models_test.py  curation_set_test.py  curation_sets_test.py  debug_test.py  document_test.py  documents_test.py  import_test.py  key_test.py  keys_test.py  metrics_test.py  multi_search_test.py  nl_search_model_test.py  nl_search_models_test.py  node_test.py  operations_test.py  override_test.py  overrides_test.py  preprocess_test.py  stemming_test.py  stopwords_set_test.py  stopwords_test.py  synonym_set_items_test.py  (+5 more)
tests/fixtures/: alias_fixtures.py  analytics_fixtures.py  analytics_rule_fixtures.py  analytics_rule_v1_fixtures.py  api_call_fixtures.py  client_fixtures.py  collections_fixtures.py  configuration_fixtures.py  conversation_model_fixtures.py  curation_set_fixtures.py  debug_fixtures.py  document_fixtures.py  key_fixtures.py  metrics_fixtures.py  multi_search_fixtures.py  nl_search_model_fixtures.py  operation_fixtures.py  override_fixtures.py  stemming_fixtures.py  stopword_fixtures.py  synonym_fixtures.py  synonym_set_fixtures.py
tests/utils/: object_assertions.py  version.py
typesense/: __init__.py  alias.py  aliases.py  analytics.py  api_call.py  client.py  collection.py  collections.py  configuration.py  debug.py  document.py  documents.py  exceptions.py  key.py  keys.py  logger.py  operations.py  override.py  overrides.py  preprocess.py  validation.py
