[flake8]
max-line-length = 160

[metadata]
license_file = LICENSE

[isort]
# isort configuration:
# https://github.com/PyCQA/isort/wiki/isort-Settings
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[mypy]
# Mypy configuration:
# https://mypy.readthedocs.io/en/latest/config_file.html
enable_error_code =
  truthy-bool,
  truthy-iterable,
  redundant-expr,
  unused-awaitable,
  ignore-without-code,
  possibly-undefined,
  redundant-self,

explicit_package_bases = true
ignore_missing_imports = true
strict = true
warn_unreachable = true
